add modified file

--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header class="container">
-        <div><img src="./" alt=""></div>
+        <div class=" flex justify-center align-center direction-column text-center"><p>Happy New Year</p>
+        <h1 class="text-lg2">New Year Party <br> Celebration</h1></div>
     </header>
+    <section>
+        <div class="flex justify-center align-center direction-column">
+            <h1 class="text-lg2">65% OFF</h1>
+            <p class="text-md">OUR HOLIDAY DEALS ARE BETTER</p>
+            <h2 class="text-lg">ALL CATEGORIES</h2>
+            <img src="./images/New Year Photo.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
